# Yoro-compiler-toolchain

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  grammar.js  setup_grammar.py  yoro.toml
config/: yoro.toml
libs/: CMakeLists.txt  Readme.md
src/: AST.cpp  AST.hpp  CMakeLists.txt  main.cpp
test/: 01_print.yoro  03_arithmetic_operators.yoro  06_loops_statements.yoro  07_function_call.yoro  EBNF_grammar.txt
test/sub_language tests/: 02_integer_operations.yoro
tests/: 01_print.yoro  02_var_decl.yoro  07_function_call.yoro  CMakeLists.txt  EBNF_grammar.txt  README.md  initial_google_test.cpp
tests/sub_language tests/: 01_language_primitives.yoro  02_integer_operations.yoro  03_string_char_operations.yoro  04_codeblocks.yoro  05_variable_declaration.yoro  06_if_statements.yoro  07_while_loops.yoro  08_for_loop.yoro  09_function_call.yoro  10_function_declaration.yoro
tree-sitter-yoro/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  grammar_template.js  init_test.yoro  invalid_yoro.yoro  package.json  pyproject.toml  setup.py  testfile.yoro
tree-sitter-yoro/bindings/c/: tree-sitter-yoro.h  tree-sitter-yoro.pc.in
tree-sitter-yoro/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-yoro/bindings/node/: binding.cc
tree-sitter-yoro/bindings/python/tree_sitter_yoro/: __init__.py  binding.c
tree-sitter-yoro/bindings/rust/: build.rs  lib.rs
tree-sitter-yoro/src/: grammar.json  node-types.json  parser.c
